cmake_minimum_required(VERSION 3.29)

project(Minishell_Joao C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# Include header directories (fixed syntax)
include_directories(
		minishell/include
		minishell/lib/include
)

# Add executable with all found sources
add_executable(minishell
		minishell/src/main/main.c
		minishell/include/minishell.h
		minishell/lib/src/error/error.c
		minishell/lib/include/jal_char.h
		minishell/lib/include/jal_conversion.h
		minishell/lib/include/jal_gnl.h
		minishell/lib/include/jal_list.h
		minishell/lib/include/jal_memory.h
		minishell/lib/include/jal_print.h
		minishell/lib/include/jal_string.h
		minishell/lib/src/char/ft_isalnum.c
		minishell/lib/src/char/ft_isalpha.c
		minishell/lib/src/char/ft_isascii.c
		minishell/lib/src/char/ft_isdigit.c
		minishell/lib/src/char/ft_isprint.c
		minishell/lib/src/conversion/atoll_valid.c
		minishell/lib/src/conversion/ft_atoi.c
		minishell/lib/src/conversion/ft_itoa.c
		minishell/lib/src/conversion/ft_tolower.c
		minishell/lib/src/conversion/ft_toupper.c
		minishell/lib/src/gnl/get_next_line.c
		minishell/lib/src/gnl/get_next_line_utils.c
		minishell/lib/src/list/ft_lstadd_back_bonus.c
		minishell/lib/src/list/ft_lstadd_front_bonus.c
		minishell/lib/src/list/ft_lstclear_bonus.c
		minishell/lib/src/list/ft_lstdelone_bonus.c
		minishell/lib/src/list/ft_lstiter_bonus.c
		minishell/lib/src/list/ft_lstlast_bonus.c
		minishell/lib/src/list/ft_lstmap_bonus.c
		minishell/lib/src/list/ft_lstnew_bonus.c
		minishell/lib/src/list/ft_lstsize_bonus.c
		minishell/lib/src/list/lstdel_safely.c
		minishell/lib/src/list/lstdetach.c
		minishell/lib/src/list/lstdup.c
		minishell/lib/src/list/lstget_int.c
		minishell/lib/src/list/lstnew_int.c
		minishell/lib/src/memory/free_partial_matrix.c
		minishell/lib/src/memory/ft_bzero.c
		minishell/lib/src/memory/ft_calloc.c
		minishell/lib/src/memory/ft_memchr.c
		minishell/lib/src/memory/ft_memcmp.c
		minishell/lib/src/memory/ft_memcpy.c
		minishell/lib/src/memory/ft_memmove.c
		minishell/lib/src/memory/ft_memset.c
		minishell/lib/src/memory/realloc.c
		minishell/lib/src/memory/sort_tab.c
		minishell/lib/src/print/ft_printf.c
		minishell/lib/src/print/put_characters.c
		minishell/lib/src/print/put_numbers.c
		minishell/lib/src/string/ft_split.c
		minishell/lib/src/string/ft_strchr.c
		minishell/lib/src/string/ft_strcmp.c
		minishell/lib/src/string/ft_strdup.c
		minishell/lib/src/string/ft_striteri.c
		minishell/lib/src/string/ft_strjoin.c
		minishell/lib/src/string/ft_strlcat.c
		minishell/lib/src/string/ft_strlcpy.c
		minishell/lib/src/string/ft_strlen.c
		minishell/lib/src/string/ft_strmapi.c
		minishell/lib/src/string/ft_strncmp.c
		minishell/lib/src/string/ft_strnstr.c
		minishell/lib/src/string/ft_strrchr.c
		minishell/lib/src/string/ft_strtrim.c
		minishell/lib/src/string/ft_substr.c
		minishell/lib/src/string/strcpy.c
		minishell/lib/Makefile
		minishell/Makefile
		minishell/lib/Makefile
		minishell/Makefile
		minishell/src/builtin/echo.c
		minishell/src/token/util.c
		minishell/lib/src/string/strndup.c
		minishell/src/test/test_tokens.c
		minishell/include/test.h
		minishell/src/command/command.c
		minishell/src/command/util.c
		minishell/src/test/test_commands.c
		minishell/lib/src/string/strjoin_free.c
		minishell/lib/src/string/intlen.c
		minishell/include/token.h
		minishell/include/command.h
		minishell/lib/src/print/ft_putchar_fd.c
		minishell/lib/src/print/ft_putendl_fd.c
		minishell/lib/src/print/ft_putnbr_fd.c
		minishell/lib/src/print/ft_putstr_fd.c
		minishell/src/exec/exec.c
		minishell/src/builtin/builtin.c
		minishell/include/builtin.h
		minishell/src/builtin/cd.c
		minishell/src/builtin/pwd.c
		minishell/lib/src/string/strarrdup.c
		minishell/lib/src/string/strarrcount.c
		minishell/include/env.h
		minishell/src/env/env.c
        minishell/src/env/helper.c
        minishell/lib/src/memory/free_matrix.c
		minishell/lib/src/string/ft_strcat.c
        minishell/src/env/env_int.h
		minishell/lib/include/jal_colour.h
		minishell/lib/include/jal_error.h
		minishell/src/main/read.c
        minishell/src/token/token.c
		minishell/src/expand/expand.c
		minishell/include/expand.h
		minishell/include/expand.h
		minishell/src/command/command.c
		minishell/src/command/util.c
		minishell/src/command/create.c
		minishell/src/command/command_int.h
		minishell/include/exec.h
		minishell/src/builtin/export.c
		minishell/src/expand/str.c
		minishell/include/status.h
		minishell/src/status/status.c
		minishell/src/sig/sig.c
		minishell/include/sig.h
		minishell/src/builtin/unset.c
		minishell/src/builtin/env.c
		minishell/src/builtin/exit.c
		minishell/src/exec/path.c
		minishell/src/exec/execv.c
		minishell/src/exec/exec_int.h
		minishell/src/exec/child.c
		minishell/src/main/prompt.c
		minishell/src/exec/util.c
		minishell/src/expand/chunk.c
		minishell/src/expand/expand_int.h
)
